--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 </style><link rel="stylesheet" href="styles-JMJZT6AS.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-JMJZT6AS.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-6NBQJTGK.js" type="module"></script></body>
+<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-N54T7L2H.js" type="module"></script></body>
 </html>
