--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <base href="/ng-todo/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<style>:root{--bg: #fff7ed;--card: rgba(255,255,255,.7);--accent: #ff7a18;--muted: #6b7280;--success: #10b981;--danger: #ef4444;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica Neue,Arial;--sm: 720px}html,body{height:100%}*{box-sizing:border-box}body{margin:0;min-height:100%;background:linear-gradient(180deg,var(--bg),#fff);display:flex;align-items:flex-start;justify-content:center;padding:3rem 1rem;color:#111827}
-</style><link rel="stylesheet" href="styles-JMJZT6AS.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-JMJZT6AS.css"></noscript></head>
+<style>:root{--bg: #fff7ed;--card: rgba(255,255,255,.7);--accent: #ff7a18;--muted: #6b7280;--success: #10b981;--danger: #ef4444;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica Neue,Arial;--sm: 720px}html{min-height:100vh}*{box-sizing:border-box}body{margin:0;min-height:100%;background:linear-gradient(180deg,var(--bg),#fff);display:flex;align-items:flex-start;justify-content:center;padding:3rem 1rem;color:#111827}@media screen and (max-width: 450px){body{padding:3rem .2rem}}
+</style><link rel="stylesheet" href="styles-J4O5BYJ7.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-J4O5BYJ7.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-N54T7L2H.js" type="module"></script></body>
+<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-XBTHDFMZ.js" type="module"></script></body>
 </html>
