--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 </style><link rel="stylesheet" href="styles-J4O5BYJ7.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-J4O5BYJ7.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-XBTHDFMZ.js" type="module"></script></body>
+<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-RVLFRTJC.js" type="module"></script></body>
 </html>
